fixed overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-x: hidden;
+  /* overflow-y: hidden; */
 }
 
 ::-webkit-scrollbar {
