--- a/src/styles/Morals.css
+++ b/src/styles/Morals.css
@@ -91,6 +91,13 @@
   color: rgb(255, 255, 255);
 }
 @media only screen and (max-width: 600px) {
+  .Morals {
+    width: 100vw;
+    padding: 0px;
+  }
+  .Morals--title {
+    font-size: 30px;
+  }
   .morals {
     width: auto;
     margin-top: 80px;
